--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <div class="form-item">
           <input class="form-item__input" type="text" placeholder="Your name...">
         </div>
-        <div>
+        <div class="form-item">
           <input class="form-item__input" type="email" placeholder="Your email...">
         </div>
         <div class="form-item">
